[package]
name = "oberon"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
license = "Apache-2"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "oberon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8"
oberon = "1.0.0-pre2"
rand = "0.8"
